test/chainsaw/authpolicy/owner_reference_desired_nil/request-authentication-assert.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: auth-policy
  labels:
    ztoperator.kartverket.no/controller: authpolicy
    app.kubernetes.io/managed-by: ztoperator
spec:
  jwtRules:
    - audiences:
        - entraid_server
      forwardOriginalToken: true
      issuer: http://mock-oauth2.auth:8080/entraid
      jwksUri: http://mock-oauth2.auth:8080/entraid/jwks
  selector:
    matchLabels:
      app: application
